# DesignRC

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DesignRC GUI Parameter windows Layout.txt  Joiner Window Design.txt  README.md  THIRD_PARTY_NOTICES.md
installer/: DesignRC.iss  build-installer.ps1
packaging/linux/: build-package.sh  changelog  copyright  designrc  designrc.desktop  qt.conf
resources/help/: index.html
resources/licenses/: FREETYPE-LICENSE.txt  QT-LGPL-3.0.txt
src/: main.cpp
src/domain/: AirfoilProfile.cpp  AirfoilProfile.h  DxfExporter.cpp  DxfExporter.h  Point2.h  WingDesign.cpp  WingDesign.h  WingStructure.cpp  WingStructure.h
src/geometry/: OcctRibBuilder.cpp  OcctRibBuilder.h
src/gui/: MainWindow.cpp  MainWindow.h  OcctViewport.cpp  OcctViewport.h  PlanViewport.cpp  PlanViewport.h  TechnicalDrawing.cpp  TechnicalDrawing.h  WingPanelEditor.cpp  WingPanelEditor.h
tests/: AirfoilProfileTests.cpp  GuiDefaultsTests.cpp  OcctGeometryTests.cpp
